CSS/home_site.css
@media screen and (min-height: 845px) {

}

.form-group {
  position: relative;
  margin-bottom: 1.5rem;
  padding-right: 0px;
  padding-left: 0px;
}
.message_body:hover {
  display:block;
  background-color: #717274;
}
.newChannelDetails
{
      margin-left: 0px;
    margin-right: 0px;

    padding-right: 30%;
    padding-left: 30%;
    padding-top: 5%;
}
.form-control-placeholder {
  position: absolute;
  top: 0;
  padding: 7px 0 0 13px;
  transition: all 200ms;
  opacity: 0.5;
}

.form-control:focus + .form-control-placeholder,
.form-control:valid + .form-control-placeholder {
  font-size: 18px;
  transform: translate3d(0, -100%, 0);
  opacity: 1;
  font-family: Times New Roman;
  margin-left: -2%;
}

  .menu_leftMain_HP{
      background-color: #222222;
      height:100% !important;
      overflow-y: auto;
  }
  .leftMenuContentWrapper_HP{
	  min-height: 100% !important;
    overflow-x: hidden;
  }



html, body {
  max-width: 100%;
  overflow: hidden;
}


.verticle_navbar_HP{
	   min-width: 11% !important;
	   background-color: #222222;
      font-family: Times New Roman !important;
       font-size: 16px;
}




.title_main_HP {
	color: #fff;
    font-family: "Satisfy", cursive;
    text-align: center;
}

.title_main_HP h3{
	  font-family: "Satisfy", cursive;
}

.defUserPic {
    border-radius: 4px;
    width: 40% !important;
    height: 40% !important;
    color:white;
    font-weight: bolder;
    font-size: 16px;
    background: blue;
    padding:7%;
}

.headerSpace_HP{
    border-bottom: 1px solid;
    width: 100%;
    height: 6%;
    margin-left: 0.8%;
    padding-left: 11.5%;
    font-family: Times New Roman !important;
    font-size: 16px;
    box-shadow: 0 2px 5px 0 rgba(0,0,0,0.16), 0 2px 10px 0 rgba(0,0,0,0.12);
    min-height: 54px;
    z-index: 600;
}
.channelTitle
{
  font-size: 22px;
}

.loggedIn_user{
	color: yellow;
    font-size: 12px;
}

.channelsContainer_menu_HP, .directMessageContainer_menu_HP{
	max-height: 50%;

}


.directMessageContainer_menu_HP{
	margin-top: 20%;
}

.messagesList
{
  width: 98%;
  z-index: -100;
}
.currentChannel
{
    background-color: #4c4b4b;
    color: #e6e6e6;
    width: 24%;
}
.dayDividerText
{
  text-align: center;
  font-weight: bold;
  font-size: 12px;
  width: 16%;
}
.navbar-nav li{
	width: 100%;
	color: #888C93;

}
.navbar-nav>li>a {
     padding-top: 1%;
     padding-bottom: 1%;
     padding-left: 11%;
}
.channelPrivacyLevel
{
  padding-right: 2%
}

.categoryTitle_HP{
	color: white;
    padding: 10%;
    font-size: medium;
}


.channels_UL_List, .directmessages_UL_List{

    margin-top: -9%;

 }

.signOut
{
    font-family: Times New Roman !important;
    font-size: 16px;
    color: #888C93;
}
.numberCount_badge{
	color: yellow;
	font-size: x-small !important;
}

.menu_leftMain_HP .row{
	margin-left: 1%;
}



.channeltitle_maincontent{
	margin-left: 45%;
	margin-top: 35%;
}

.footer
{
    position: fixed;
    bottom: 0;
    width: 101%;
    text-align: center;
    background-color: rgb(34, 34, 34);
    color: #827e7e;
    font-size: 14px;
    font-weight: lighter;
    font-style: italic;
}

.message_time
{
	font-style: italic;
    font-size: smaller;
}
.message
{
	margin-left: -5%;
}





.message_body{
    overflow-wrap: break-word;
}
.addOnMessages
{
  margin-top: -0.5%;

}

.loginDetails
{
    padding-left: 10%;
    padding-bottom: 9%;
}
pre
{
    font-family: Times New Roman;
    display: block;
    padding: 0px;
    margin: 0 0 10px;
    font-size: 12px;
    line-height: normal;
    color: #333;
    word-break: break-all;
    word-wrap: break-word;
    background-color: #ffffff;
    border: 0px;
    border-radius: 0px;
    white-space: pre-wrap;
}

.rightContent_wrapper_HP {
    position: absolute;
    bottom: 6%;
    left: 13%;
    width: 87.8%;
    max-height: 88%;
    overflow-y: auto;
    overflow-x: hidden;
}


.footerSpace_HP {
    position: absolute;
    bottom: 0.2%;
    width: 87.7%;
    right: 1.82%;
}
.fa-paper-plane
{
  font-size: 20px;
}
.input-group-btn, .inputMessage
{
  border: 2px solid;
}

.daySeperatorLine{
    border-bottom: 1px solid;
    border-bottom-color: #bcbcbd;
    width: 42%;
    margin-top: 0.7%;
}

.messageHoverButtons
{
  font-size: larger;
  display:none;
  position: absolute;
  z-index: 100;
}

.message_header,.message_body{
  cursor: pointer;
}

